# BRIAN

./: .gitignore  BRIAN-Sphere-LLM_PROJECT_PLAN.md  CODEX_GUIDANCE.md  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
diagnostics/: checkpoint_selection_matrix.csv  p0_full_vs_incremental.csv  p0_global_sweep.csv  p0_memory_intervention.csv  p0_suffix_invariance.csv  p1_norm_audit.csv  p1_route_intervention.csv  summary.md
reports/: attention_global_kv_design.md  corrected_free_sphere_r125_2b_experiment_judgment.md  global_kv_failure_audit_2026-06-22.md  global_kv_overfit_discussion_2026-06-22.md  package_a_r125_2b_experiment_judgment.md  pure_factorized_global_kv_work_report.md  router_space_diagnostics.md  sparse_varlen_routing_work_report.md
scripts/: check_ddp_eval_consistency.py  estimate_compute.py  eval.py  global_kv_checkpoint_diagnostics.py  make_routing_report.py  make_stage_gate_report.py  prepare_data.py  prepare_tokenizer.py  public_benchmark.py  run_experiment.py  run_package_a_parallel.py  train.py
tests/: test_attention_global_kv.py  test_baseline_forward.py  test_checkpoint_resume.py  test_cli_entrypoints.py  test_compute_report.py  test_config.py  test_config_inventory.py  test_cost_control_report.py  test_data_manifest.py  test_dataloader.py  test_determinism_report.py  test_difficulty_report.py  test_distributed.py  test_environment_pins.py  test_eval_configs.py  test_experiment_coverage.py  test_experiment_runner.py  test_fixed_route_equivalence.py  test_fixed_route_stability_report.py  test_global_kv.py  (+35 more)
(+527 files in other folders)
