[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brian-sphere-llm"
version = "0.1.0"
description = "Block-routed latent computation research stack for BRIAN-Sphere-LLM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Research code; license TBD" }
authors = [{ name = "Miocio-nora" }]
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "torch>=2.7,<2.12",
  "transformers>=4.44",
  "datasets>=2.20",
  "wandb>=0.17",
  "plotly>=5.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
